--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 					let iMinutes = (nTime.getTime() - day1) / (1000 * 60); //分钟数
 					$("#sTime").html("开始时间: " + "2022-08-04 19:30:00");
 					$("#nTime").html("当前时间: " + formartDate(nTime));
-					$("#dDays").html("相爱天数: " + iDays.toFixed(13) + "天");
-					$("#dHour").html("相爱小时: " + iHours.toFixed(10) + "小时");
-					$("#dMinutes").html("相爱分钟: " + iMinutes.toFixed(8) + "分钟");
+					$("#dDays").html("在一起天数: " + iDays.toFixed(13) + "天");
+					$("#dHour").html("在一起小时: " + iHours.toFixed(10) + "小时");
+					$("#dMinutes").html("在一起分钟: " + iMinutes.toFixed(8) + "分钟");
 					// return iHours
 				};
 
